# nicothumb

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build-rs.yaml  release.yaml  tag.yaml
src/: main.rs
