[package]
name = "nicothumb"
version = "1.0.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
clap = { version = "3.1.12", features = ["derive"] }
kuchiki = "0.8.1"
regex = "1.5.5"
reqwest = "0.11.10"
tokio = { version = "1.17.0", features = ["full"] }
